[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "hok-camp-api"
version = "1.0.0"
authors = [
  { name="Seuriin", email="seurii@gmail.com" },
]
description = "An unofficial, asynchronous API wrapper for the Honor of Kings Camp website."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
keywords = ["hok", "honor of kings", "api", "async", "wrapper", "gaming", "unofficial"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Developers",
    "Topic :: Games/Entertainment",
    "Operating System :: OS Independent",
]
dependencies = [
    "httpx[http2]>=0.27.0",
    "aiosqlite>=0.20.0",
    "orjson>=3.11.4",
    "zstandard>=0.22.0",
    "rich>=13.9.4",
]
[project.urls]
"Homepage" = "https://github.com/SSL-ACTX/hok-camp-api"
"Bug Tracker" = "https://github.com/SSL-ACTX/hok-camp-api/issues"
[tool.setuptools]
packages = ["hok", "hok.models"]
